[package]
name = "typed_nodes_macros"
version = "0.1.0"
authors = ["Erik Hedvall <hello@erikhedvall.nu>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.15", features = ["extra-traits"] }
quote = { version = "1.0.27", default-features = false }
proc-macro2 = "1.0.56"
convert_case = "0.6.0"
